docs: update src

--- a/index.html
+++ b/index.html
@@ -127,6 +127,6 @@
       type="module"
       src="//cdn.jsdelivr.net/npm/@vscode/webview-ui-toolkit@1.1.0/dist/toolkit.js"
     ></script>
-    <script src="//cdn.jsdelivr.net/npm/tab-goto@0.1.0/dist/index.min.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/tab-goto@0.1.0"></script>
   </body>
 </html>
